<?xml version="1.0"?>
<package format="2">
  <name>hw_example</name>
  <version>0.1.0</version>
  <description>A starting "Hello World" example of the BU Team's ARIAC competitor package.</description>
  <maintainer email="mcboyd@bu.edu">Matt Boyd</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nist_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
